--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -32,7 +32,7 @@ align-items: center;
 /*  About  */
 
 .footerAbout {
-  width: 15%;
+  width: 20%;
   margin-right: 30px;
 
 }
@@ -46,8 +46,8 @@ align-items: center;
 .footerAbout p {
   font-size: 12px;
   color: $secondary;
-  margin: 20px 0 20px 0;
-  padding: 0;
+  margin: 20px 0 10px 0;
+  padding: 15px 0 10px 0;
   
 
 }
@@ -76,7 +76,7 @@ align-items: center;
 
 .footerContact {
   margin: 20px 0 30px 15px;
-  width: 15%;
+  width: 20%;
 
  
 }
@@ -98,7 +98,7 @@ align-items: center;
 
 .footerProfile {
   margin: 20px 0 30px 15px;
-  width: 15%;
+  width: 20%;
 
 }
 
