--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -2,120 +2,104 @@
 
 
 
-.contactForm ul {
+.contactForm {
   display: flex;
   flex-direction: column;
   position: relative;
   left: 21%;
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin: 80px 0;
 
 
 }
 
-.contactForm li {
+.contactForm input[type=text] {
+
+  width: 600px;
+  border: none;
+  color: $primary;
+  border-bottom: 1px $primary solid;
+  font-family: "poppins";
+  font-size: 1rem;
+  line-height: 2rem;
   margin-bottom: 40px;
+
 }
 
-
-
-input[type=text] {
-
+input[type=email] {
   width: 600px;
   border: none;
   color: $primary;
   border-bottom: 1px $primary solid;
   font-family: "poppins";
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 2rem;
+  margin-bottom: 40px;
 
 }
 
-.contactForm input[type=email] {
+textarea {
   width: 600px;
   border: none;
   color: $primary;
   border-bottom: 1px $primary solid;
   font-family: "poppins";
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 2rem;
+  margin-bottom: 40px;
 
 }
 
-.contactForm textarea {
-  width: 600px;
-  border: none;
-  color: $primary;
-  border-bottom: 1px $primary solid;
-  font-family: "poppins";
-  font-size: 1rem;
-  line-height: 1.5rem;
+.modalButton {
+    width: 110px;
+    transition-duration: 0.4s; 
+    cursor: pointer;
+    font-size: .9rem;
+    line-height: 1.2rem;
+    padding: 10px 20px;
 
 }
 
-  .contactForm button {
+//The Modal (background) 
+#modalOverlay {
+  width: 100%; //Full width 
+  height: 100vh;  //Full height 
+  position: absolute; //Stay in place
+  background: rgba(0, 0, 0, 0.7);
 
-       background-color: $secondary;
-       border: 2px #666666a5 solid;
-       padding: 16px 32px;
-       font-size: 14px;
-       text-align: center;
-       transition-duration: 0.4s; 
-       cursor: pointer;
-}
-     
-       .contactForm button:hover {
-         background-color: #666; 
-         border: 2px #666 solid;
-         color: white;
-     
-         &:focus {
-           background-color: #666; 
-           border: 2px #666 solid;
-           color: white;
-     
-         }
-        }
-
-     
-  
-
-/*.inputText {
-
-  border: none;
-  color: $secondary;
-  border-bottom: 1px $primary solid;
-  padding: 4px 0;
-  transition: .3s ease-in-out;
-  margin: 20px 0;
+  display: none; //changed from Flex to None
+  align-items: center;
+  justify-content: center;
 
 }
 
-.inputText:focus {
-  outline: none;
-  padding: 4px 8px;
-  border-radius: 12;  
-  border-bottom: 1px $primary solid;
+//Modal Content
+#modalOverlay #modal {
+  max-width: 650px;
+  width: 100%;
+  background: white;
+  height: 400px;
+
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
 
-.inputText::placeholder {
-  color: $primary;
-  transition: .3s;
-  font-family: "poppins";
-  font-size: 10px;
-  line-height: 1.5rem;
+#modalOverlay #modal .modalFooter {
+  margin: auto;
+
 }
 
+ //The Close Button 
+/*#close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 
-.inputEmail {
-  border: 1px solid transparent;
-  border-bottom: 1px $primary solid;
-  padding: 4px 0;
-  outline-style: none;
-  transition: 3s ease-in-out;
-
-
-
-
+#close:hover,
+#close:focus {
+  background-color: #666; 
+  border: 2px #666 solid;
+  color: white;
 }*/
-
