--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,15 +1,83 @@
+@import "./variables";
+
+
+
+@media (max-width: 800px) {
+
+  #mainMenu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  #mainMenu.show {
+    display: inline-block;
+  }
+}
+  
 
 
 
 
-@media (max-width: 800px){
-  header {
-    color: red;
+
+@media (max-width: 576px) {
+  #mainMenu {
+  display: none;
+  flex-direction: column;
+  width: 100%;
+}
+
+#mainMenu.show {
+  display: flex;
+
+}
+
+.hamButton {
+  display: block;
+}
+  nav {
+      background-color: rgb(62, 109, 149);
   }
 }
 
+/*
 
- /* header {
+  @media (max-width: 320px) {
+    #topBar {
+          flex-direction: column;
+          align-items: center;
+      }
+      input[type=checkbox] {
+          align-self: flex-start;
+      }
+      label {
+          align-self: flex-start;
+      }
+      .logo {
+          margin: 10px 0 20px 0;
+      }
+  }
+    #mainMenu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+  }
+
+
+
+
+@media (max-width: 1000px){
+  header {
+     display: flex;
+     justify-content: space-between;
+     text-align: center;
+  
+ 
+   }
+}
+
+@media (max-width: 800px){
+ header, main {
     display: block;
     text-align: center;
     font-size: 17px;
@@ -61,12 +129,19 @@ nav li {
   flex-direction: column;
 }
 
+
+footer {
+  .footerFlexContainer {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+    width: 80%;
+
+  }
+} 
+
   footer {
     .footerNewsletter{
       width: 70%;
     }
   } */
-
-
-  
-  
