--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,7 +1,9 @@
 @use "./partials/setup";
+@use "./partials/baseStyles";
 @use "./partials/typography";
+@use "./partials/nav";
 @use "./partials/header";
 @use "./partials/sections";
 @use "./partials/footer";
 @use "./partials/form";
-
+@use "./partials/mediaQueries";
