--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -16,11 +16,11 @@
 .contactHeader {
           
 
-          height: 35vh;
+          height: 37vh;
           width: 100%;
           background-image: url('./../assets/contact-us.jpg');
           background-size: auto;
-          background-position: top;
+          background-position: center;
           background-repeat: no-repeat;
 
 
